fix(web-app): spacing across markdown components
#806, #811

--- a/services/web-app/components/do-dont/do-dont.module.scss
+++ b/services/web-app/components/do-dont/do-dont.module.scss
@@ -14,8 +14,12 @@
 //---------------------------------------
 // Row
 //---------------------------------------
-.do-dont-row {
+.do-dont-row [class*='grid'] {
   margin-top: spacing.$spacing-07;
+
+  @include breakpoint.breakpoint('md') {
+    margin-bottom: 0;
+  }
 }
 
 .do-dont-row [class*='markdown_paragraph-container'] {
@@ -32,6 +36,7 @@
 
   @include breakpoint.breakpoint('md') {
     width: 75%;
+    margin-bottom: 0;
   }
 }
 
